# financial_llm_daily

./: .env.2c4g.example  .env.example  .gitignore  PROXY_SETUP.md  QUICKSTART.md  README.md  README_PLAYWRIGHT.md  SMART_PROXY_STRATEGY.md  alembic.ini  claude.md  docker-compose.2c4g.yml  docker-compose.yml  pyproject.toml  requirements.txt  update_admin_email.py
.claude/: settings.local.json
docs/: DEPLOY-2C4G.md  PRD.md  STAGE2_COMPLETION.md  STAGE2_COMPLETION_SUMMARY.md  STARTUP_GUIDE.md  TDD-1.md  TDD-2.md  TDD-3-MVP-DEPLOY.md  TDD-3-appendix.md  TDD-3.md  playwright_usage_guide.md  stage2_progress.md  system_parameters.md  task_2.md  update.md  wordcloud_optimization.md  系统架构图.drawio
docs/phase1/: architecture-phase1.drawio
docs/prase1/: ARCHITECTURE_UPDATE.md  README.md  architecture-phase1-updated.md  architecture-phase1.drawio  dataflow-phase1-updated.md  dataflow-phase1.drawio  error.md  system_overview.md  task.md  task.md.bak  update_phase1_summary.md
docs/prase2/: architecture-phase2.drawio  dataflow-phase2.drawio
scripts/: debug_crawl_all_sources.py  debug_crawl_issue.py  debug_store_articles.py  demo_playwright_features.py  disable_openai.py  init_project.sh  reset_failed_articles.py  reset_failed_extraction_queue.py  retry_article.py  seed_test_data.py  start_all.sh  stop_all.sh  test_domestic_site.py  test_dynamic_source.py  test_llm_api_direct.py  test_provider_router_fix.py  test_rss_proxy.py  test_simhash_fix.py  test_simple_dynamic.py  test_smart_proxy.py  test_static_sources.py  test_with_proxy.py  toggle_openai_simple.py  update_openai_status.sql
src/api/: main.py
src/cli/: run_once.py
src/composer/: builder.py  llm_report_generator.py  scorer.py
src/config/: settings.py
src/crawlers/: base.py  browser_pool.py  deduplicator.py  dynamic_crawler.py  proxy_strategy.py  rss_crawler.py  static_crawler.py  text_extractor.py
src/db/: session.py
src/mailer/: batcher.py  retry_handler.py  smtp_client.py
src/models/: __init__.py  article.py  base.py  delivery.py  extraction.py  report.py  source.py  system.py  user.py
src/nlp/: __init__.py  chunking.py  extractor.py  merger.py  provider_router.py
tests/: test_celery_execution.py  test_cost_calculator.py  test_llm_providers.py  test_playwright_integration.py  test_provider_priority.py  test_wordcloud_keywords.py
(+72 files in other folders)
